--- a/index.html
+++ b/index.html
@@ -20,16 +20,44 @@
 						<div class="content">
 							<div class="inner">
 								<h1>A #YOLOrdinary Giveaway</h1>
-								<p>Terms and Conditions</p>
+								<h3>Terms and Conditions</h3>
+
 								<article>
 									<p>1. The #YOLOrdinary Giveaway Contest period will be from 1 December 2016 to 31 December, both dates inclusive.</p>
+
+									<p>2. To be eligible for the contest, a participant must:</p>
+									<p>a. Be following both <a href="http://instagram.com/portfoyolo">@portfoyolo</a> and <a href="https://www.instagram.com/theordinaryco/">@theordinaryco</a> accounts on Instagram</p>
+									<p>b. Post a photo on his/her Instagram account, which is made accessible to public viewing</p>
+									<p>c. Tag both @portfoyolo and @theordinaryco’s accounts in the photo</p>
+									<p>d. Hashtag #YOLOrdinaryTrip</p>
+
+									<p>3. Only publicly-released entries posted between 1 December 2016 and 31 December 2016 (both dates inclusive) will be considered for the contest.</p>
+
+									<p>4. Portfoyolo and The Ordinary Co will not be liable for any entry that fails to reach us before the expiry of the contest period.</p>
+
+									<p>5. The winner will be announced on both <a href="http://instagram.com/portfoyolo">@portfoyolo's</a> and <a href="https://www.instagram.com/theordinaryco/">@theordinaryco's</a> accounts by 15 January 2017.</p>
+
+									<p>6. The winning Prize will be awarded to 1 winner and consists of the following:</p>
+									<p>a. 2 Air Tickets to Bali, Indonesia and/or</p>
+									<p>b. Accommodation for 2 in Bali, Indonesia,</p>
+									<p>c. Both of which are not worth more than S$888.00 d. With these limitations:</p>
+									<p>i. Air tickets will be purchased by Portfoyolo.</p>
+									<p>ii. Air tickets are limited to flying out from and returning to Singapore only.</p>
+									<p>iii. The prize value of S$888.00 is limited to air ticket and accommodation expenses only, and will not cover the winner’s personal expenses, insurance, injury or any other travel-related costs.</p>
+
+									<p>7. The Prize is not transferable or exchangeable for cash, credits or otherwise.</p>
+
+									<p>8. All decisions made by Portfoyolo and The Ordinary Co. on matters relating to this contest are final, conclusive and binding.</p>
+
+									<p>9. By participating in this contest, the winner agrees to the disclosure of his/her name and any other particulars (including photographs) for publicity purposes. The winner also agrees to cooperate with Portfoyolo and The Ordinary Co to participate in all promotional and publicity activities without any compensation or payment if required.</p>
+
+									<p>10.By participating in this contest, all participants agree and accept the Terms and Conditions stipulated in this document.</p>
+
 								</article>
+
 							</div>
 						</div>
 					</header>
-
-				<!-- Main -->
-					<div id="main"></div>
 
 				<!-- Footer -->
 					<footer id="footer">
